-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 16
-
Component/s: hotspot
-
b26
-
ppc
Once the build is fixed, VM does not come up, but that is a separate issue (
- duplicates
-
JDK-8256859 PPC64 builds broken after JDK-8254231
-
- Closed
-
- relates to
-
JDK-8256924 ppc, ppcle, s390: JVM crashes at VM init after JDK-8254231
-
- Resolved
-
-
JDK-8256860 S390 builds broken after JDK-8254231
-
- Resolved
-
-
JDK-8254231 Implementation of Foreign Linker API (Incubator)
-
- Resolved
-
(1 links to)