8256922: ppc, ppcle build broken after JDK-8254231

Reviewed-by: shade, lucy, mdoerr